UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/Contact.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>