UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Call_Me_Now__c.field-meta.xml
<CustomField>
    <fullName>Call_Me_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Call Me Now Field Requested by Lee, Junewon</description>
    <label>Call Me Now</label>
    <type>Checkbox</type>
</CustomField>