UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/CanUserSeeThisRecord__c.field-meta.xml
<CustomField>
    <fullName>CanUserSeeThisRecord__c</fullName>
    <formula>IF(
OR(
$User.View_All_Contacts__c = TRUE,
IF(
CONTAINS(CreatedBy.UserRole.Name, &apos;B2B&apos;),
IF(
CONTAINS($UserRole.Name, &apos;B2B&apos;),
TRUE,
FALSE
),
IF(
NOT(CONTAINS($UserRole.Name, &apos;B2B&apos;)),
TRUE,
FALSE
)
)
),
TRUE,
FALSE
)</formula>
    <label>Can logged in user see this record?</label>
    <type>Checkbox</type>
</CustomField>