UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Company_Growth_Positive__c.field-meta.xml
<CustomField>
    <fullName>Company_Growth_Positive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Growth Positive</label>
    <type>Checkbox</type>
</CustomField>