UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Contact_Position__c.field-meta.xml
<CustomField>
    <fullName>Contact_Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C Level</fullName>
            </value>
            <value>
                <fullName>Day to Day</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>