UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <description>Created for Saad Abughazaleh for use mainly by the BAMs. 4/6/2020</description>
    <inlineHelpText>Select an option to update the status of the contact.</inlineHelpText>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Left Employment</fullName>
            </value>
            <value>
                <fullName>Survey - Selected</fullName>
            </value>
            <value>
                <fullName>Survey - Sent</fullName>
            </value>
            <value>
                <fullName>Survey - Responded</fullName>
            </value>
            <value>
                <fullName>Survey - Resend</fullName>
            </value>
            <value>
                <fullName>Survey - Resent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>