UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Authorized Buyer</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>D &amp; B Contact</fullName>
            </value>
            <value>
                <fullName>Maintenance Contact</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Recruit</fullName>
            </value>
            <value>
                <fullName>Recruit - Employee Candidate</fullName>
            </value>
            <value>
                <fullName>Send Communication</fullName>
            </value>
            <value>
                <fullName>Site Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>