UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>External ID used for Sitetracker</description>
    <inlineHelpText>External ID used for Sitetracker</inlineHelpText>
    <label>External ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>