UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/First_Campaign_Response__c.field-meta.xml
<CustomField>
    <fullName>First_Campaign_Response__c</fullName>
    <label>First Campaign Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Webinars</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>