UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/First_Campaign_Response_Detail__c.field-meta.xml
<CustomField>
    <fullName>First_Campaign_Response_Detail__c</fullName>
    <label>First Campaign Response Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>