UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/FNSFA__Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>FNSFA__Customer_Id__c</fullName>
    <label>Finance Customer Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>