UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Frontier_Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Frontier_Account_Executive__c</fullName>
    <label>Frontier Account Executive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>