UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Equals true if the contact is no longer valid because we do not allow contacts to be deleted.</description>
    <inlineHelpText>Check if contact is no longer available.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>