UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Contact&apos;s Industry</description>
    <inlineHelpText>Industry</inlineHelpText>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Business Services</fullName>
            </value>
            <value>
                <fullName>Colleges &amp; Universities</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Consumer Goods</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>High Technology</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Lodging &amp; Hospitality</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Media &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Metals &amp; Mining</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>Personal Services</fullName>
            </value>
            <value>
                <fullName>Pharmaceuticals</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Telecommunications</fullName>
            </value>
            <value>
                <fullName>Travel &amp; Transportation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>