UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/InsideView_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>InsideView_Phone_Number__c</fullName>
    <inlineHelpText>This Phone number is populated when a user triggers an import from InsideView.</inlineHelpText>
    <label>InsideView Phone Number</label>
    <type>Phone</type>
</CustomField>