UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/InvitationLink__c.field-meta.xml
<CustomField>
    <fullName>InvitationLink__c</fullName>
    <label>InvitationLink</label>
    <type>Url</type>
</CustomField>