UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/INVOCA_FOR_SF__TextPhone__c.field-meta.xml
<CustomField>
    <fullName>INVOCA_FOR_SF__TextPhone__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &apos;(&apos;, &apos;&apos;),&apos; &apos;,&apos;&apos;), &apos;+&apos;, &apos;&apos;), &apos;)&apos;,&apos;&apos;), &apos;-&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TextPhone</label>
    <type>Text</type>
</CustomField>