UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Last_CSR_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_CSR_Survey_Sent__c</fullName>
    <label>Last CSR Survey Sent</label>
    <type>Date</type>
</CustomField>