UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Last_Modified_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_ID__c</fullName>
    <formula>CASESAFEID(  LastModifiedById  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified ID</label>
    <type>Text</type>
</CustomField>