UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Last_Referral_Company__c.field-meta.xml
<CustomField>
    <fullName>Last_Referral_Company__c</fullName>
    <label>Last Referral Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>