UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Last_Referral_Email__c.field-meta.xml
<CustomField>
    <fullName>Last_Referral_Email__c</fullName>
    <label>Last Referral Email</label>
    <type>Email</type>
</CustomField>