UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Last_Referral_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Referral_Phone_Number__c</fullName>
    <label>Last Referral Phone Number</label>
    <type>Phone</type>
</CustomField>