UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/LBI__LatticeAccountName__c.field-meta.xml
<CustomField>
    <fullName>LBI__LatticeAccountName__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>