UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Lead_Product_List__c.field-meta.xml
<CustomField>
    <fullName>Lead_Product_List__c</fullName>
    <label>Lead Product List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cloud IT</fullName>
            </value>
            <value>
                <fullName>Connect Cloud</fullName>
            </value>
            <value>
                <fullName>Enterprise WiFi</fullName>
            </value>
            <value>
                <fullName>Ethernet</fullName>
            </value>
            <value>
                <fullName>FAW UCaaS</fullName>
            </value>
            <value>
                <fullName>FiOS or BHSI</fullName>
            </value>
            <value>
                <fullName>SD-WAN</fullName>
            </value>
            <value>
                <fullName>Simply WiFi Secure</fullName>
            </value>
            <value>
                <fullName>SIP Trunking</fullName>
            </value>
            <value>
                <fullName>Smart Voice</fullName>
            </value>
            <value>
                <fullName>Voice (TDM)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>