UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Marketo_Sync__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketo Sync</label>
    <type>Checkbox</type>
</CustomField>