UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/mkto71_Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Acquisition_Date__c</fullName>
    <description>Date lead was acquired in Marketo.</description>
    <label>Acquisition Date (Marketo)</label>
    <type>DateTime</type>
</CustomField>