UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/mkto71_Acquisition_Program__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Acquisition_Program__c</fullName>
    <description>The marketo program the lead was acquired by</description>
    <label>Acquisition Program (Marketo)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>