UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/mkto71_Acquisition_Program_Id__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Acquisition_Program_Id__c</fullName>
    <description>Marketo Program Id</description>
    <label>Acquisition Program Id (Marketo)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>