UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/mkto71_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Lead_Score__c</fullName>
    <description>Lead score as assigned in marketo</description>
    <label>Lead Score (Marketo)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>