UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/mkto71_Original_Referrer__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Original_Referrer__c</fullName>
    <label>Original Referrer (Marketo)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>