UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/MLR__c.field-meta.xml
<CustomField>
    <fullName>MLR__c</fullName>
    <description>Field requested by Martech</description>
    <inlineHelpText>Field requested by Martech</inlineHelpText>
    <label>MLR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>