UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/MQO_Date__c.field-meta.xml
<CustomField>
    <fullName>MQO_Date__c</fullName>
    <label>MQO Date</label>
    <type>DateTime</type>
</CustomField>