UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/MQO_Lead__c.field-meta.xml
<CustomField>
    <fullName>MQO_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MQO Lead</label>
    <type>Checkbox</type>
</CustomField>