UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Network_Reliability__c.field-meta.xml
<CustomField>
    <fullName>Network_Reliability__c</fullName>
    <description>Assessment Question</description>
    <label>Network Reliability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not reliable</fullName>
            </value>
            <value>
                <fullName>Somewhat reliable</fullName>
            </value>
            <value>
                <fullName>Very reliable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>