UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/OM_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>OM_Phone_Number__c</fullName>
    <formula>IF (  LEN(Phone) &gt;= 10, Phone, MobilePhone )</formula>
    <label>OM Phone Number</label>
    <type>Text</type>
</CustomField>