UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Owner_s_Profile__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Profile__c</fullName>
    <formula>Owner.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&apos;s Profile</label>
    <type>Text</type>
</CustomField>