UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact__c</fullName>
    <formula>text(Account.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Contact</label>
    <type>Text</type>
</CustomField>