UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Phone_Number_with_Extension__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_with_Extension__c</fullName>
    <description>This field is used to store the Zoominfo Work phone field. A trigger then parses the phone number into the Phone and Extension__c fields.</description>
    <label>Phone Number with Extension</label>
    <length>100</length>
    <type>Text</type>
</CustomField>