UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Products_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Products_of_Interest__c</fullName>
    <label>Products of Interest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>