UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Row_Id__c.field-meta.xml
<CustomField>
    <fullName>Row_Id__c</fullName>
    <description>Siebel Contact Row ID</description>
    <externalId>true</externalId>
    <label>Row Id</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>