UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Secondary_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contacts (Secondary Campaign)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>