UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Service_Bundle_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Bundle_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Bundle Contract</label>
    <type>Checkbox</type>
</CustomField>