UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Service_Cost_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Service_Cost_Satisfaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Cost Satisfaction</label>
    <type>Checkbox</type>
</CustomField>