UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>(GMT) Casablanca, Monrovia</fullName>
            </value>
            <value>
                <fullName>(GMT) Greenwich Mean Time: Dublin, Edinburgh, Lisban, London</fullName>
            </value>
            <value>
                <fullName>(GMT+01:00) Amsterdam, Berlin, Bern, Rome, Stockholm, Vienna</fullName>
            </value>
            <value>
                <fullName>(GMT+01:00) Belgrade, Bratislava, Budapest, Ljubljana, Prague</fullName>
            </value>
            <value>
                <fullName>(GMT+01:00) Brussels, Copenhagen, Madrid, Paris</fullName>
            </value>
            <value>
                <fullName>(GMT+01:00) Sarajevo, Skopje, Sofija, Vilnius, Warsaw, Zagreb</fullName>
            </value>
            <value>
                <fullName>(GMT+01:00) West Central Africa</fullName>
            </value>
            <value>
                <fullName>(GMT+02:00) Athens, Istanbul, Minsk</fullName>
            </value>
            <value>
                <fullName>(GMT+02:00) Bucharest</fullName>
            </value>
            <value>
                <fullName>(GMT+02:00) Cairo</fullName>
            </value>
            <value>
                <fullName>(GMT+02:00) Harare, Pretoria</fullName>
            </value>
            <value>
                <fullName>(GMT+02:00) Helsinki, Riga, Tallinn</fullName>
            </value>
            <value>
                <fullName>(GMT+02:00) Jerusalem</fullName>
            </value>
            <value>
                <fullName>(GMT+03:00) Baghdad</fullName>
            </value>
            <value>
                <fullName>(GMT+03:00) Kuwait, Riyadh</fullName>
            </value>
            <value>
                <fullName>(GMT+03:00) Moscow, St. Petersburg, Volgograd</fullName>
            </value>
            <value>
                <fullName>(GMT+03:00) Nairobi</fullName>
            </value>
            <value>
                <fullName>(GMT+03:30) Tehran</fullName>
            </value>
            <value>
                <fullName>(GMT+04:00) Abu Dhabi, Muscat</fullName>
            </value>
            <value>
                <fullName>(GMT+04:00) Baku, Tbilisi, Yerevan</fullName>
            </value>
            <value>
                <fullName>(GMT+04:30) Kabul</fullName>
            </value>
            <value>
                <fullName>(GMT+05:00) Ekaterinburg</fullName>
            </value>
            <value>
                <fullName>(GMT+05:00) Islamabad, Karachi, Tashkent</fullName>
            </value>
            <value>
                <fullName>(GMT+05:30) Calcutta, Chennai, Mumbai, New Delhi</fullName>
            </value>
            <value>
                <fullName>(GMT+05:45) Kathmandu</fullName>
            </value>
            <value>
                <fullName>(GMT+06:00) Almaty, Novosibirsk</fullName>
            </value>
            <value>
                <fullName>(GMT+06:00) Astana, Dhaka</fullName>
            </value>
            <value>
                <fullName>(GMT+06:00) Sri Jayawardenepura</fullName>
            </value>
            <value>
                <fullName>(GMT+06:30) Rengoon</fullName>
            </value>
            <value>
                <fullName>(GMT+07:00) Bangkok, Hanoi, Jakarta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>