UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/X18_Digit_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Contact_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Contact ID</label>
    <type>Text</type>
</CustomField>