UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/fields/Zoom_Individual_ID__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Individual_ID__c</fullName>
    <description>Created to identify which contacts are converted from Leads that came from Zoominfo app</description>
    <label>Zoom Individual ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>