UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/recordTypes/Alternate_Channel_Contact.recordType-meta.xml
<RecordType>
    <fullName>Alternate_Channel_Contact</fullName>
    <active>true</active>
    <description>Record type for Alternate Channel Partner users at Frontier</description>
    <label>Alternate Channel Contact</label>
</RecordType>