UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/recordTypes/Carrier_Service_Contact.recordType-meta.xml
<RecordType>
    <fullName>Carrier_Service_Contact</fullName>
    <active>true</active>
    <label>Carrier Service Contact</label>
</RecordType>