UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/recordTypes/Commercial_SMB_contact.recordType-meta.xml
<RecordType>
    <fullName>Commercial_SMB_contact</fullName>
    <active>true</active>
    <label>Commercial SMB contact</label>
</RecordType>