UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/recordTypes/default.recordType-meta.xml
<RecordType>
    <fullName>default</fullName>
    <active>true</active>
    <label>default</label>
</RecordType>