UCF-APR2.4/ftr main/force-app/main/default/objects/Contact/recordTypes/Grant_Contacts.recordType-meta.xml
<RecordType>
    <fullName>Grant_Contacts</fullName>
    <active>true</active>
    <description>Used for containing all Grant Contacts</description>
    <label>Grant Contacts</label>
</RecordType>